--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,6 @@ nav ul li a {
     font-weight: bold;
 }
 
-/* Section Heading */
 .section-title {
     text-align: center;
     font-size: 1.8rem;
@@ -48,7 +47,6 @@ nav ul li a {
     color: #363330;
 }
 
-/* Posts Grid */
 .posts-grid {
     display: grid;
     gap: 2rem;
@@ -63,6 +61,7 @@ article img {
     object-fit: cover;
     border-radius: 8px;
     margin-bottom: 1rem;
+    border: 2px solid #116A40;
 }
 
 article {
